fix x overflow scroll

--- a/scss/pages/_info_base.scss
+++ b/scss/pages/_info_base.scss
@@ -64,6 +64,7 @@
 
 	.header-body {
 		position: relative;
+		overflow: hidden;
 
 		display: flex;
 		flex-direction: column;
